# mcrataway

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml  ci.yml
docs/: ARCHITECTURE.md  DETECTIONS.md  DEVELOPMENT.md  RULES.md
scripts/: build.py
src/mcrataway/: __init__.py  __main__.py  cli.py  config.py  constants.py
src/mcrataway/core/: __init__.py  evidence.py  quarantine.py  scan_engine.py  verdict.py
src/mcrataway/detectors/: __init__.py  base.py  d01_process_exec.py  d02_network_io.py  d03_dynamic_loading.py  d04_filesystem_jar_mod.py  d05_persistence.py  d06_deserialization.py  d07_native_jni.py  d08_credential_theft.py  d09_obfuscation.py  d10_reflection_indirect.py  d11_onchain_c2.py  d12_resourcepack_exploit.py
src/mcrataway/discovery/: __init__.py  os_paths.py  walker.py
src/mcrataway/parsers/: __init__.py  archive.py  classfile.py  (+5 more)
tests/: test_core.py
tests/fixtures/: eth_c2_mod.jar.quarantined  generator.py  native_loader.jar.quarantined  session_stealer.jar.quarantined
tests/integration/: test_endpoints.py  test_websocket.py
tests/unit/: test_classfile.py  test_deps.py  test_detectors.py  test_engine.py  test_matcher.py  test_production_readiness.py  test_rules.py  test_string_reconstructor.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
web/src/: App.tsx  main.tsx
web/tests/: Badges.test.tsx  FindingTable.test.tsx  ProgressBar.test.tsx  ScanPage.test.tsx
(+41 files in other folders)
